feat: simplify component manager + construct component in the manager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@ set(SOURCES
 )
 
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/ComponentManager
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Components
     ${CMAKE_CURRENT_SOURCE_DIR}/Components
     ${CMAKE_CURRENT_SOURCE_DIR}/Exceptions
     ${CMAKE_CURRENT_SOURCE_DIR}/Utils
