feat: Create Registry, ENtityManager and SystemManager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,8 @@
-set(SOURCES 
+set(SOURCES
     main.cpp
-)
-
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Components
-    ${CMAKE_CURRENT_SOURCE_DIR}/Components
-    ${CMAKE_CURRENT_SOURCE_DIR}/Exceptions
-    ${CMAKE_CURRENT_SOURCE_DIR}/Utils
+    ECS/EntityManager.cpp
+    ECS/SystemManager.cpp
+    ECS/Registry.cpp
 )
 
 # Add an executable target
