feat: add graphic and Sfml window

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,20 @@
 set(SOURCES
-    main.cpp
-    ECS/EntityManager.cpp
-    ECS/ComponentManager.cpp
-    ECS/SystemManager.cpp
-    ECS/Registry.cpp
-    ECS/Systems/FallSystem.cpp
-    Utils/Chrono.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/EntityManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/ComponentManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/SystemManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Registry.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Systems/FallSystem.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Utils/Chrono.cpp
+)
+
+set(GRAPHICAL_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Color.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Sfml/SfmlGraphicModule.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Sfml/SfmlWindow.cpp
 )
 
 # Add an executable target
-add_executable(super_engine_xtreme ${SOURCES})
+add_executable(super_engine_xtreme ${SOURCES} ${GRAPHICAL_SOURCES})
+
+target_link_libraries(super_engine_xtreme PRIVATE sfml-graphics sfml-audio sfml-window sfml-system)
