--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,23 +1,15 @@
-set(SOURCES
+set(ENGINE_BINARY super_engine_xtreme)
+
+add_executable(${ENGINE_BINARY})
+
+set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/EntityManager.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/ComponentManager.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/SystemManager.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Registry.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Systems/FallSystem.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Systems/RenderSystem.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ECS/Components/DrawableComponent.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Utils/Chrono.cpp
 )
 
-set(GRAPHICAL_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Color.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Sfml/SfmlGraphicModule.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Sfml/SfmlWindow.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Graphic/Sfml/SfmlDrawable.cpp
-)
+target_sources(${ENGINE_BINARY} PRIVATE ${SRC})
 
-# Add an executable target
-add_executable(super_engine_xtreme ${SOURCES} ${GRAPHICAL_SOURCES})
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ECS)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Utils)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Graphic)
 
-target_link_libraries(super_engine_xtreme PRIVATE sfml-graphics sfml-audio sfml-window sfml-system)
+target_link_libraries(super_engine_xtreme PRIVATE sex_graphic_sfml)
