--- a/src/ECS/Systems/CMakeLists.txt
+++ b/src/ECS/Systems/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/FallSystem.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/RenderSystem.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/EventSystem.cpp
 )
 
 target_sources(${ENGINE_BINARY} PRIVATE ${SRC})
