--- a/src/ECS/Events/CMakeLists.txt
+++ b/src/ECS/Events/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/EventBase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ClickEvent.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/CloseWindowEvent.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/EventCallBack.cpp
 )
 
 target_sources(${ENGINE_BINARY} PRIVATE ${SRC})
