feat: set UpdateContext in update from systems

--- a/src/ECS/CMakeLists.txt
+++ b/src/ECS/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/EntityManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/SystemManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Registry.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/UpdateContext.cpp
 )
 
 target_sources(${ENGINE_BINARY} PRIVATE ${SRC})
