refacto: replace many occurences of pointers by references

--- a/src/ECS/Events/CMakeLists.txt
+++ b/src/ECS/Events/CMakeLists.txt
@@ -2,6 +2,8 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/EventBase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ClickEvent.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/CloseWindowEvent.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/KeyPressedEvent.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/KeyReleasedEvent.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/EventCallBack.cpp
 )
 
