--- a/src/ECS/Systems/CMakeLists.txt
+++ b/src/ECS/Systems/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(SRC
-    ${CMAKE_CURRENT_SOURCE_DIR}/FallSystem.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/VelocitySystem.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/RenderSystem.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/EventSystem.cpp
 )
